tests/compiler/function_generalization_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/function_generalization_1.kk:3:17
  │
3 │ let y: number = x
  │                 ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - number      | + string    |
    +---------------+-------------+
